Review Features Updated

--- a/.env
+++ b/.env
@@ -1,19 +1,15 @@
-NAME=four-square-api
-PORT=5001
+NAME=rental-car-v1
+PORT=5000
 NODE_ENV=development
 
-DATABASE_URL=mongodb://0.0.0.0:27017/four-square-api
+DATABASE_URL=mongodb://0.0.0.0:27017/rental-car
 
-JWT_EXPIRE_TIME=86400000
+JWT_EXPIRE_TIME=86400000 # 1 Day
 JWT_SECRET=a2ckjkj12345673dd957e14297a3494c3901evse
 
-FOUR_SQUARE_API_KEY=dsimson
-FOUR_SQUARE_API_SECRET=fsq3QRDH6+eS3mEOmdIVepT5DNWmmvfPQSbkXTpk6nx2PLc=
-
-
-STATIC_FOLDER_PATH=public
+STATIC_FOLDER_PATH=public #Static Path
 USER_DIRECTORY=uploads/users
-DEFAULT_UPLOAD_SIZE=10000000
+DEFAULT_UPLOAD_SIZE=10000000 #Default Upload Size is 10 mb
 
 
 
