--- a/.env
+++ b/.env
@@ -1,15 +1,19 @@
-NAME=rental-car-v1
-PORT=5000
+NAME=four-square-api
+PORT=5001
 NODE_ENV=development
 
-DATABASE_URL=mongodb://0.0.0.0:27017/rental-car
+DATABASE_URL=mongodb://0.0.0.0:27017/four-square-api
 
-JWT_EXPIRE_TIME=86400000 # 1 Day
+JWT_EXPIRE_TIME=86400000
 JWT_SECRET=a2ckjkj12345673dd957e14297a3494c3901evse
 
-STATIC_FOLDER_PATH=public #Static Path
+FOUR_SQUARE_API_KEY=dsimson
+FOUR_SQUARE_API_SECRET=fsq3QRDH6+eS3mEOmdIVepT5DNWmmvfPQSbkXTpk6nx2PLc=
+
+
+STATIC_FOLDER_PATH=public
 USER_DIRECTORY=uploads/users
-DEFAULT_UPLOAD_SIZE=10000000 #Default Upload Size is 10 mb
+DEFAULT_UPLOAD_SIZE=10000000
 
 
 
