--- a/dashboard/.gitignore
+++ b/dashboard/.gitignore
@@ -1,16 +1,9 @@
-client/node_modules
-server/node_modules
-
-.env
-/.env
-/.bat
-
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
 /node_modules
 /.pnp
 .pnp.js
-
 
 # testing
 /coverage
@@ -24,7 +17,6 @@ server/node_modules
 .env.development.local
 .env.test.local
 .env.production.local
-env.sh
 
 npm-debug.log*
 yarn-debug.log*
