--- a/package.json
+++ b/package.json
@@ -1,14 +1,40 @@
 {
-  "name": "image-server",
-  "description": "Example in memory todos api with json-server by Learn with Sumit",
+  "name": "rental-car-v1",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "Car Parking Rest Api",
+  "type": "module",
+  "main": "app.js",
   "scripts": {
-    "start": "json-server --watch db_todos.json --no-cors true --port 9000"
+    "start": "nodemon app.js",
+    "data:import": "node src/config/seeder",
+    "data:destroy": "node src/config/seeder -d"
   },
+  "author": "Nazmul Huda",
+  "license": "ISC",
   "dependencies": {
-    "json-server": "^0.17.0"
+    "axios": "^0.27.2",
+    "bcrypt": "^5.0.1",
+    "colors": "^1.4.0",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "date-fns": "^2.30.0",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.2",
+    "express-rate-limit": "^6.0.5",
+    "http-errors": "^2.0.0",
+    "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.4",
+    "mongoose": "^6.1.7",
+    "mongoose-unique-validator": "^3.0.0",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.4",
+    "node-device-detector": "^2.0.8",
+    "sharp": "^0.30.3",
+    "winston": "^3.9.0",
+    "winston-daily-rotate-file": "^4.7.1",
+    "yup": "^0.32.11"
   },
-  "keywords": [],
-  "author": "Nazmul Huda"
+  "devDependencies": {
+    "@types/sharp": "^0.32.0"
+  }
 }
